# RaidZeroLib

./: .clang-format  .gitignore  .gitmodules  AdaptivePurePursuitController_8cpp.html  AdaptivePurePursuitController_8hpp.html  AdaptivePurePursuitController_8hpp_source.html  AsyncVelBangBangController_8cpp.html  AsyncVelBangBangController_8hpp.html  AsyncVelBangBangController_8hpp_source.html  AsyncVelTBHController_8cpp.html  AsyncVelTBHController_8hpp.html  AsyncVelTBHController_8hpp_source.html  CMakeLists.txt  CMakeLists.txt.in  CoordinateAxis_8cpp.html  CoordinateAxis_8hpp.html  CoordinateAxis_8hpp_source.html  CoordinateRotation_8cpp.html  CoordinateRotation_8hpp.html  CoordinateRotation_8hpp_source.html  CoordinateSystem_8cpp.html  CoordinateSystem_8hpp.html  CoordinateSystem_8hpp_source.html  CrossPlatformMutex_8cpp.html  CrossPlatformMutex_8hpp.html  CrossPlatformMutex_8hpp_source.html  CrossPlatformThread_8cpp.html  CrossPlatformThread_8hpp.html  CrossPlatformThread_8hpp_source.html  CubicBezier_8cpp.html  CubicBezier_8hpp.html  DiscretePath_8cpp.html  DiscretePath_8hpp.html  DiscretePath_8hpp_source.html  Dockerfile  FeedforwardController_8hpp.html  FeedforwardController_8hpp_source.html  IterativeVelBangBangController_8cpp.html  IterativeVelBangBangController_8hpp.html  IterativeVelBangBangController_8hpp_source.html  (+325 more)
.d/: autonomous.cpp.d  initialize.cpp.d  main.cpp.d
.d/Competition/: auton.cpp.d  autonomous.cpp.d  declarations.cpp.d  initialize.cpp.d  opcontrol.cpp.d
.d/Subsystems/: Drive.cpp.d  Flywheel.cpp.d  Lift.cpp.d  Robot.cpp.d
.d/lib4253/: Math.cpp.d  Node.cpp.d  OdomDisplay.cpp.d  Odometry.cpp.d  PID.cpp.d  Path.cpp.d  PurePursuit.cpp.d  Robot.cpp.d  Slew.cpp.d  TakeBackHalf.cpp.d
.d/lib4253/Controller/: BangBang.cpp.d  LinearMotionProfile.cpp.d  MotorVelocity.cpp.d  PID.cpp.d  PurePursuit.cpp.d  Ramsete.cpp.d  Slew.cpp.d  TakeBackHalf.cpp.d
.d/lib4253/Filter/: Biquad.cpp.d  DEMA.cpp.d  EMA.cpp.d  Kalman.cpp.d  SMA.cpp.d  avgFilter.cpp.d  biquadFilter.cpp.d  emaFilter.cpp.d  kalmanFilter.cpp.d
.d/lib4253/Splines/: Point2D.cpp.d  SimplePath.cpp.d  Trajectory.cpp.d
.d/lib4253/Subsystems/: Drive.cpp.d  Flywheel.cpp.d  Intake.cpp.d  Lift.cpp.d  Odometry.cpp.d  Robot.cpp.d  XDrive.cpp.d
.d/lib4253/UI/: OdomDisplay.cpp.d  gui.cpp.d
.d/lib4253/Utility/: Math.cpp.d  Matrix.cpp.d  Odometry.cpp.d  Path.cpp.d  SettleUtil.cpp.d
.github/: .codecov.yml  CODE_OF_CONDUCT.md
.github/workflow/: pros.yml  test.yml
.github/workflows/: PROS.yml  docs.yml  pros.yml  test.yml
deploy/pathplanner/: New Path.path
docs/: Doxyfile  Doxyfile-mcss  conf.py  index.md
docs/api/: api.md  chassis.md  control.md  filter.md  geometry.md  index.md  pathing.md  trajectory.md  units.md  utility.md
docs/doxygen/: Doxyfile  Doxyfile-mcss  conf.py
docs/tutorials/: index.md  install.md
docs/tutorials/examples/: examples.md  index.md
docs/tutorials/setup/: index.md  setup.md
include/: OdomDisplay.hpp  api.h  auton.hpp  declarations.hpp  main.h
include/RaidZeroLib/: api.hpp
include/RaidZeroLib/Chassis/: AdaptivePurePursuitController.hpp
include/RaidZeroLib/Controller/: LinearMotionProfile.hpp  MotorVelocityController.hpp
include/RaidZeroLib/Filter/: Slew.hpp
include/RaidZeroLib/Geometry/: CoordinateAxis.hpp  CoordinateRotation.hpp  CoordinateSystem.hpp  Point.hpp  Pose.hpp  Rotation.hpp  Transform.hpp
include/RaidZeroLib/Pathing/: DiscretePath.hpp  ParametricPath.hpp
include/RaidZeroLib/Spline/: SimplePath.hpp
include/RaidZeroLib/Utility/: Math.hpp  StateMachine.hpp  Units.hpp  Util.hpp
include/Subsystems/: Drive.hpp  Flywheel.hpp  Lift.hpp  Robot.hpp
include/au/: au.hpp
include/lib4253/: Math.hpp  Node.hpp  PID.hpp  Path.hpp  PurePursuit.hpp  Robot.hpp  Slew.hpp  api.hpp  emaFilter.hpp
include/lib4253/Chassis/: Drive.hpp  Motor.hpp  OdomController.hpp  Odometry.hpp  RamseteController.hpp  XDrive.hpp
include/lib4253/Controller/: AbstractVelocityController.hpp  BangBang.hpp  LinearMotionProfile.hpp  MotorVelocity.hpp  PID.hpp  PurePursuit.hpp  Ramsete.hpp  Slew.hpp  TakeBackHalf.hpp  VelocityController.hpp
include/lib4253/Display/: OdomDisplay.hpp
include/lib4253/Filter/: AbstractFilter.hpp  Biquad.hpp  DEMA.hpp  EMA.hpp  Filter.hpp  Kalman.hpp  SMA.hpp  avgFilter.hpp  biquadFilter.hpp  emaFilter.hpp
include/lib4253/GUI/: OdomDisplay.hpp
include/lib4253/Splines/: Point2D.hpp  SimplePath.hpp  Trajectory.hpp
include/lib4253/Subsystems/: Drive.hpp  Flywheel.hpp  Intake.hpp  Lift.hpp  Motor.hpp  Odometry.hpp  Robot.hpp  XDrive.hpp
include/lib4253/Trajectory/: Bezier.hpp  PathGenerator.hpp  SimplePath.hpp  Trajectory.hpp
include/lib4253/Utility/: Math.hpp  Matrix.hpp  Odometry.hpp  Path.hpp  Settler.hpp  StateMachine.hpp  TaskWrapper.hpp  Units.hpp  auton.hpp  declarations.hpp
include/okapi/: api.hpp
scripts/: build-test.sh  clang-format.sh  coverage.sh  cppcheck.sh  doxygen.sh  run-all.sh  valgrind.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
src/: autonomous.cpp  initialize.cpp  main.cpp  opcontrol.cpp
src/Competition/: auton.cpp  autonomous.cpp  declarations.cpp  initialize.cpp  main.cpp  opcontrol.cpp
src/RaidZeroLib/Chassis/: AdaptivePurePursuitController.cpp
src/RaidZeroLib/Controller/: LinearMotionProfile.cpp  MotorVelocityController.cpp
src/RaidZeroLib/Filter/: SlewRate.cpp
src/RaidZeroLib/Geometry/: CoordinateAxis.cpp  CoordinateRotation.cpp  CoordinateSystem.cpp  Point.cpp  Pose.cpp  Rotation.cpp  Transform.cpp  Twist.cpp
src/Subsystems/: Drive.cpp  Robot.cpp
src/lib4253/: Math.cpp  Node.cpp  OdomDisplay.cpp  Odometry.cpp  PID.cpp  Path.cpp  PurePursuit.cpp  Robot.cpp  Slew.cpp  TakeBackHalf.cpp  emaFilter.cpp
test/: RotationTest.cpp
test/include/: mocks.hpp
test/src/: mocks.cpp
(+203 files in other folders)
